fix: url updates

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <meta name="twitter:image" content="https://open-graph-vercel.vercel.app/api/shellscript-starter" />
   <meta name="twitter:image:alt" content="Shellscript-Starter" />
   <meta property="fb:app_id" content="3408346496051059" />
-  <meta property="og:url" content="https://shinokada.github.io/shellscript-starter/" />
+  <meta property="og:url" content="https://shellscript-starter.codewithshin.com/" />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Shellscript-Starter" />
   <meta property="og:description" content="Quick starter for Shell/Bash script" />
@@ -69,7 +69,7 @@
         'http://www.apache.org/licenses/',
         'https://opensource.org/licenses/MIT',
         'https://www.npmjs.com/package/shellscript-starter',
-        'https://shinokada.github.io/shellscript-starter/'
+        'https://shellscript-starter.codewithshin.com/'
       ]
     };
   </script>
