--- a/index.html
+++ b/index.html
@@ -34,10 +34,13 @@
   <meta property="og:image:alt" content="Shellscript-Starter" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-56Q5D99ZCL"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag () { dataLayer.push(arguments); }
+    function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
+
     gtag('config', 'G-56Q5D99ZCL');
   </script>
 </head>
