--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <!-- Google tag (gtag.js) -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-56Q5D99ZCL"></script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-D8HRTFYCVN"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
 
-    gtag('config', 'G-56Q5D99ZCL');
+    gtag('config', 'G-D8HRTFYCVN');
   </script>
 </head>
 
